# openclaw-harness

./: .env.example  .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  pyproject.toml  run_web.py
.github/workflows/: ci.yml
docs/: jupyter-support.md
src/harness/: __init__.py  cache.py  config.py  cost_tracker.py  evaluator.py  exceptions.py  generator.py  golden_rules.py  jupyter_extension.py  langchain_integration.py  llm.py  llm_adapter.py  llm_providers.py  logger.py  models.py  planner.py  plugins.py  progress.py  skill_extractor.py  state_manager.py  template_loader.py  vectors.py
src/harness/cli/: __init__.py  main.py
src/harness/web/: __init__.py  agent_dashboard.py  api.py  app.py  cost_dashboard.py  routes.py  websocket_manager.py
src/harness/web/templates/: agent_dashboard.html  cost_dashboard.html
templates/: golden_rules.md  skill_template.md
tests/: conftest.py  test_evaluator.py  test_golden_rules.py  test_planner.py  test_state_manager.py
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
