[tool.poetry]
name = "openclaw-harness"
version = "0.1.0"
description = "Harness Engineering framework for OpenClaw"
authors = ["Flw <fulingwei@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/fulingwei1/openclaw-harness"
keywords = ["ai", "llm", "harness", "automation", "openclaw"]
packages = [{include = "harness", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
pydantic-settings = "^2.0"
click = "^8.0"
jinja2 = "^3.0"
openai = "^1.0"
anthropic = "^0.25"
rich = "^13.0"
pyyaml = "^6.0"
python-dotenv = "^1.0"
# Web UI
fastapi = "^0.109"
uvicorn = "^0.27"
websockets = "^12.0"
redis = "^5.0"
# Async
aiohttp = "^3.9"
httpx = "^0.26"
# Vector Search
numpy = "^1.24"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.0"
pytest-asyncio = "^0.23"
black = "^24.0"
isort = "^5.0"
flake8 = "^7.0"
mypy = "^1.0"
pre-commit = "^3.0"

[tool.poetry.scripts]
harness = "harness.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black 配置
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort 配置
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# mypy 配置
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# pytest 配置
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=harness --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

# coverage 配置
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
